--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.8",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
+    "expo": "^49.0.23",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
+    "native": "^0.3.3",
+    "react": "^18.2.0",
+    "react-native": "0.72.10",
     "react-native-linear-gradient": "^2.8.3"
   },
   "devDependencies": {
