--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/database": "^17.4.2",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^49.0.23",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.14",
+    "expo-build-properties": "0.11.1",
+    "expo-linear-gradient": "12.7.2",
+    "expo-modules-autolinking": "1.10.3",
+    "expo-status-bar": "1.11.1",
+    "lodash.trim": "^4.5.1",
     "native": "^0.3.3",
+    "qs": "^6.12.0",
     "react": "^18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.73.6",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-svg": "^13.9.0"
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
