--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "@supabase/supabase-js": "^2.41.1",
+    "dotenv": "^16.4.5",
     "expo": "^49.0.23",
+    "expo-constants": "~14.4.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "native": "^0.3.3",
     "react": "^18.2.0",
     "react-native": "0.72.10",
+    "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.9.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
