--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.41.1",
     "dotenv": "^16.4.5",
     "expo": "^49.0.23",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
@@ -27,7 +28,10 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-svg": "^13.9.0",
     "react-native-url-polyfill": "^2.0.0",
-    "typescript": "^5.1.3"
+    "react-native-video": "^5.2.1",
+    "react-native-youtube-iframe": "^2.3.0",
+    "typescript": "^5.1.3",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
