Android folder e update immagini

--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "it.gfi.howtodoit",
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
