--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "@supabase/supabase-js": "^2.41.1",
@@ -20,6 +20,7 @@
     "expo-constants": "~14.4.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "native": "^0.3.3",
     "react": "^18.2.0",
@@ -29,9 +30,11 @@
     "react-native-svg": "^13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
     "typescript": "^5.1.3",
-    "react-native-webview": "13.2.2"
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
